--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Sync State to Novu
-        uses: novuhq/actions-echo-sync@main
+        uses: novuhq/actions-echo-sync@v0.0.1
         with:
           novu-api-key: ${{secrets.NOVU_API_KEY}}
           echo-url: "https://my-echo-app.vercel.app/api/echo"
