--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,7 @@
 # workflow triggers
+name: Deploy to Novu
 on:
-  push:
-    branches: [ source ]
-  pull_request:
-    branches: [ source ]
   workflow_dispatch:
-
-  # Allows external webhook trigger
-  repository_dispatch:
-    types:
-      - webhook
 
 jobs:
   deploy:
