--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@novu/echo": "^0.0.1-alpha.10",
     "next": "14.1.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "@react-email/components": "0.0.15",
+    "@react-email/tailwind": "^0.0.14",
+    "react-email": "2.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
